# enroll

./: CHANGELOG.md  CHANGES  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  RELEASING.md  THIRD_PARTY_LICENSES  cargo-sources.json  index.html  justfile  license.html  org.cosmic-utils.Enroll.yml  org.cosmic_utils.enroll.yml  release-plz.toml
.github/: CONTRIBUTING.md  README.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  flatpak.yml  publish.yml  release-plz.yml
docs/: CONTRIBUTING.md  README.md  RELEASING.md
docs/cosmic_utils_enroll/: all.html  constant.WINDOW_MIN_HEIGHT.html  constant.WINDOW_MIN_WIDTH.html  fn.main.html  index.html  macro.fl.html  sidebar-items.js
flatpak/: fi.joonastuomi.Fprint.yml  org.cosmic-utils.Enroll.yml  org.cosmic_utils.Enroll.yml  org.cosmic_utils.enroll.yml
i18n/cs/: cosmic_utils_enroll.ftl
i18n/en/: cosmic_utils_enroll.ftl
i18n/fi/: cosmic_utils_enroll.ftl
i18n/it/: cosmic_utils_enroll.ftl
i18n/sv/: cosmic_utils_enroll.ftl
i18n/uk/: cosmic_utils_enroll.ftl
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/copr/: cosmic-utils-enroll.spec
packaging/debian/: changelog  control  copyright  cosmic-utils-enroll.install  rules
resources/: app.desktop  fi.joonastuomi.Fprint.desktop  fi.joonastuomi.Fprint.metainfo.xml  org.cosmic-utils.Enroll.desktop  org.cosmic-utils.Enroll.metainfo.xml  org.cosmic_utils.Enroll.metainfo.xml  org.cosmic_utils.enroll.desktop  org.cosmic_utils.enroll.metainfo.xml
src/: accounts_dbus.rs  config.rs  fprint_dbus.rs  main.rs
src/app/: app.rs  appl.rs  application.rs  error.rs  finger.rs  fprint.rs  message.rs  mod.rs  page.rs  settings.rs  subscription.rs  tasks.rs  users.rs  view.rs
(+88 files in other folders)
