[package]
name = "cosmic-utils-enroll"
version = "1.1.1"
edition = "2024"
license = "MPL-2.0"
description = "GUI for fprintd fingerprint enrolling"
repository = "https://github.com/cosmic-utils/enroll"
[features]
default = []
wgpu = ["libcosmic/wgpu"]

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
ashpd = { version = "0.13.8", features = ["settings"] }
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
nix = { version = "0.31.1", features = ["user"] }
open = "5.3.0"
rust-embed = "8.5.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.44"
zbus = { version = "5.12.0", features = ["tokio"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Not an applet
    "desktop",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # systemd.scope
    "desktop-systemd-scope",
    # desktop portal for sandboxed enviroment
    "xdg-portal",
]

[profile.release]
lto = true
codegen-units = 1
debug = false
strip = true
